--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongodb": "^3.1.1",
-    "mongoose": "^5.2.4"
+    "mongoose": "^5.2.4",
+    "nodemon": "^1.18.3"
   }
 }
