--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.10",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.4",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "validator": "^10.4.0"
   }
 }
